chore: 헤더 반응형 관련 스타일 및 구조 수정 chore: 이외 여러가지 잡다한 수정 	modified:   src/components/BadgeEmoji/BadgeEmoji.module.scss 	modified:   src/components/Header/HeaderComponents/Header.jsx 	modified:   src/components/Header/HeaderComponents/Header.module.scss 	modified:   src/components/Header/HeaderComponents/HeaderService.jsx 	modified:   src/components/Header/HeaderComponents/HeaderService.module.scss 	modified:   src/components/Header/HeaderLayout.jsx 	modified:   src/components/Header/HeaderLayout.module.scss 	modified:   src/pages/HomePage/HomePage.jsx 	modified:   src/pages/HomePage/HomePage.module.scss 	modified:   src/pages/ListPage/ListPage.jsx 	modified:   src/pages/PostPage/PostIdPage/EditPage/EditPage.jsx 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.jsx 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.module.scss 	modified:   src/pages/PostPage/PostPage.jsx

--- a/src/components/BadgeEmoji/BadgeEmoji.module.scss
+++ b/src/components/BadgeEmoji/BadgeEmoji.module.scss
@@ -7,16 +7,28 @@
   gap: 0.4rem;
   align-items: flex-start;
   background: rgba(0, 0, 0, 0.54);
+
+  @include mobile {
+    padding: 0.4rem 0.8rem;
+  }
 }
 
 .emoji {
   @include font16Regular;
   line-height: 2.1rem;
   color: $Black;
+
+  @include mobile {
+    @include font14Regular;
+  }
 }
 
 .count {
   @include font16Regular;
   line-height: 2rem;
   color: $White;
+
+  @include mobile {
+    @include font14Regular;
+  }
 }
