--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -2,55 +2,73 @@
 .headerServiceContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
   padding: 1.1rem 0;
   width: 100%;
+
   .headerContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 120rem;
+    width: 124.8rem;
     @include mobile {
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
     }
+
     .lineOnMobile {
       display: none;
       border: none;
       height: 0.1rem;
       width: 100%;
       background-color: #ededed;
+
       @include mobile {
         display: block;
         margin: 1.1rem 0;
       }
     }
   }
-  .toNickname {
-    font-size: 2.8rem;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: -0.28px;
+
+  .headerNickName {
+    padding: 0 2.4rem;
+
+    @include mobile {
+      padding: 0 2rem;
+    }
+
+    .toNickname {
+      @include font28Bold;
+
+      @include mobile {
+        @include font18Bold;
+      }
+    }
   }
+
   .headerRight {
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    padding: 0 2.4rem;
+
     @include mobile {
       display: flex;
       align-items: center;
       justify-content: flex-end;
       margin-left: auto;
+      padding: 0 2rem;
     }
+
     .howManyPerson {
       margin: 0 2.8rem 0 0;
       display: flex;
+
       @include tablet {
         display: none;
       }
+
       p {
         color: var(--gray-900, $Grayscale900);
         font-size: 1.8rem;
@@ -60,10 +78,12 @@
           font-weight: 700;
         }
       }
+
       .senderProfile {
         position: relative;
         display: flex;
         left: -1.5rem;
+
         .senderProfileImg {
           width: 2.8rem;
           height: 2.8rem;
@@ -71,6 +91,7 @@
           margin-right: -1.3rem;
           border: 1.4px $White solid;
         }
+
         .senderCount {
           width: 2.8rem;
           height: 2.8rem;
@@ -88,6 +109,7 @@
         }
       }
     }
+
     .selectionBar {
       width: 0.1rem;
       height: 2.8rem;
@@ -96,48 +118,58 @@
         display: none;
       }
     }
+
     .selectionBar2 {
       width: 0.1rem;
       height: 2.8rem;
       background-color: var(--gray-200, #eee);
       margin: 0 1.2rem;
     }
+
     .headerEmoji {
       display: flex;
-      margin: 0 0 0 2.8rem;
       gap: 0.8rem;
+      margin-right: 1.4rem;
       @include mobile {
-        margin: 0;
         margin-right: 0.8rem;
       }
+
       .badgeBtn {
         border: none;
         background-color: #ffffff;
         cursor: pointer;
       }
+
       .modalIcon {
         position: relative;
         border: none;
         background-color: $White;
       }
+
+      .arrowDownIcon {
+        width: 2.4rem;
+        height: 2.4rem;
+      }
     }
+
     .addEmojiBtn {
       display: flex;
       align-items: center;
-      border-radius: 6px;
+      border-radius: 0.6rem;
       border: 1px solid var(--gray-300, $Grayscale300);
       background-color: $White;
-      padding: 6px 16px;
+      padding: 0.6rem 1.6rem;
       font-weight: 500;
       font-size: 1.6rem;
     }
+
     .shareBtn {
       display: flex;
       align-items: center;
-      border-radius: 6px;
-      border: 1px solid var(--gray-300, $Grayscale300);
+      border-radius: 0.6rem;
+      border: 0.1rem solid var(--gray-300, $Grayscale300);
       background: var(--white, $White);
-      padding: 6px 16px;
+      padding: 0.6rem 1.6rem;
     }
   }
 }
@@ -147,6 +179,13 @@
   top: 4rem;
   right: 5rem;
 }
+
+.headerRightButton {
+  @include mobile {
+    padding: 0.6rem 0.8rem;
+  }
+}
+
 .onMobileHide {
   @include mobile {
     display: none;
