--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1.3rem 0;
+  padding-top: 1.3rem;
   width: 100%;
 
   @include mobile {
-    padding: 0.8rem 0 1.2rem;
+    padding-top: 0.8rem;
   }
 
   .headerContainer {
