chore: 헤더 서비스 중앙정렬 	modified:   src/components/Header/HeaderComponents/HeaderService.module.scss

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -2,7 +2,7 @@
 .headerServiceContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   padding-top: 1.3rem;
   width: 100%;
 
