--- a/src/pages/ListPage/ListPage.module.scss
+++ b/src/pages/ListPage/ListPage.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 100%;
+  position: relative;
 }
 
 .cardSection {
@@ -36,4 +37,72 @@
   @include mobile {
     width: calc(100% - 2rem * 2);
   }
+}
+
+.serchButton {
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  width: 30px;
+  cursor: pointer;
+  background-color: plum;
+  z-index: 2;
+  @include font24Bold;
+}
+
+.serchBox {
+  overflow: hidden;
+  position: absolute;
+  transform: translateX(0px);
+  height: 100%;
+  width: 0px;
+  transition: all 800ms cubic-bezier(0.8, 0, 0.33, 1);
+  border-radius: 0% 0% 100% 50%;
+  background-color: aqua;
+  top: 0;
+  right: 0;
+}
+
+.serchBoxOpen {
+  overflow: hidden;
+  position: absolute;
+  height: 100%;
+  width: 400px;
+  transform: translateX(-500px);
+  border-radius: 0% 0% 0% 0%;
+  transition: all 800ms cubic-bezier(0.8, 0, 0.33, 1);
+  background: rgba(255, 255, 255, 0.6);
+  top: 0;
+  right: 0;
+}
+
+.content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(0px);
+  opacity: 0;
+  transition: all 900ms cubic-bezier(0.9, 0, 0.33, 1);
+
+  div {
+    margin: 20px 0;
+    text-decoration: none;
+    font-family: sans-serif;
+    color: rgba(0, 0, 0, 0.9);
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    transition: all 300ms cubic-bezier(0.9, 0, 0.33, 1);
+  }
+}
+
+.contentOpen {
+  opacity: 1;
+  transform: translateX(-100px);
 }
