--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -1,23 +1,20 @@
 @import 'assets/styles/global.scss';
 
-html,
-body {
-  height: 100%;
-}
-
 .cardListOverContainer {
-  height: calc(100% - 12.7rem);
+  display: flex;
+  padding: 11.2rem 2.4rem 13.5rem;
+  min-height: calc(100vh - 11.9rem);
+
+  @include tablet {
+    padding: 9.2rem 2.4rem 13.5rem;
+  }
+
+  @include mobile {
+    padding: 3.2rem 2rem;
+    min-height: calc(100vh - 10.4rem);
+  }
 }
 
-.cardListContainer {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  overflow: scroll;
-}
 .beige {
   background-color: $Orange200;
 }
@@ -31,29 +28,28 @@ body {
   background-color: $Green200;
 }
 
+.contentContainer {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 120rem;
+}
+
 .cardList {
-  position: relative;
   display: grid;
-  margin-top: 11.3rem;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
-  width: 120rem;
+  width: 100%;
   grid-auto-rows: 28rem;
+
   @media (max-width: 1248px) {
-    width: calc(100% - 4.8rem);
-    margin-left: 2.4rem;
-    margin-right: 2.4rem;
-    margin-top: 9.3rem;
   }
+
   @include tablet {
-    width: 100%;
     grid-template-columns: 1fr 1fr;
-    margin-top: 9.3rem;
   }
+
   @include mobile {
-    width: 100%;
     grid-template-columns: 1fr;
-    margin-top: 3.2rem;
   }
 }
 
@@ -111,15 +107,17 @@ body {
 }
 
 .editButton {
-  position: absolute;
-  top: -5rem;
-  right: 0;
+  float: right;
+  margin-bottom: 2.4rem;
+
   @include tablet {
     position: fixed;
     z-index: 1;
     bottom: 2.4rem;
-    right: auto;
-    top: auto;
     width: calc(100% - 4.8rem);
+  }
+
+  @include mobile {
+    width: calc(100% - 4rem);
   }
 }
