--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -4,21 +4,12 @@
   display: flex;
   flex-direction: column;
   justify-items: center;
-  width: 38.4rem;
-  height: 28rem;
+  width: 100%;
+  height: 100%;
   border-radius: 1.6rem;
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
-
-  @include tablet {
-    width: 100%;
-    height: 100%;
-  }
-  @include mobile {
-    width: 100%;
-    height: 100%;
-  }
 }
 
 .profileBox {
@@ -77,15 +68,13 @@
   flex-direction: column;
   align-items: start;
   gap: 1.4rem;
-  border-top: 0.1rem solid $Grayscale200;
   border: 0;
-  background-color: transparent;
+  border-top: 0.1rem solid $Grayscale200;
+  background: var(--white, #ffffff);
 }
 
 .text {
-  width: 33.6rem;
   height: 10.6rem;
-  flex-shrink: 0;
 
   overflow: hidden;
   color: $Grayscale600;
@@ -100,7 +89,6 @@
   text-align: start;
 
   @include mobile {
-    width: 27.2rem;
     height: 5.6rem;
   }
 }
