--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -10,7 +10,7 @@
   }
 
   @include mobile {
-    padding: 3.2rem 2rem;
+    padding: 3.2rem 2rem 13.5rem;
     min-height: calc(100vh - 10.4rem);
   }
 }
@@ -39,7 +39,6 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
   width: 100%;
-  grid-auto-rows: 28rem;
 
   @media (max-width: 1248px) {
   }
@@ -57,15 +56,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 38.4rem;
-  height: 28rem;
+  width: 100%;
+  height: 28.1rem;
   border-radius: 1.6rem;
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
-  @include tablet {
-    width: 100%;
-    height: 100%;
+
+  @include mobile {
+    height: 23.1rem;
   }
 }
 
