--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -11,15 +11,13 @@
 }
 
 .modal {
-  z-index: 1000;
   position: fixed;
   top: 34.8rem;
   left: 50%;
   transform: translateX(-50%);
-  width: 100vw; /* 화면 전체 너비 */
-  height: 100vh; /* 화면 전체 높이 */
   background: $White;
-  width: 60rem;
+  width: 100%;
+  max-width: 60rem;
   height: 47.6rem;
   padding: 4rem;
   border-radius: 1.6rem;
@@ -31,10 +29,10 @@
     transform: translate(-50%, -50%);
   }
   @include mobile {
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 40rem;
+    width: calc(100% - 4rem);
+    max-width: 40rem;
     height: 47.6rem;
+    padding: 3.2rem;
   }
 }
 
@@ -62,6 +60,8 @@
       align-items: flex-start;
       gap: 0.6rem;
       color: $Black;
+      white-space: nowrap; /* 텍스트가 줄바꿈 없이 한 줄로 표시되도록 설정 */
+      overflow: hidden; /* 컨테이너 범위를 넘어서는 콘텐츠가 숨겨지도록 설정 */
 
       .sender {
         display: flex;
@@ -99,12 +99,16 @@
 
 .content {
   @include font18Regular;
-  height: 24rem;
+  height: 23.6rem;
   padding-right: 1.6rem;
   text-align: left;
   overflow: auto;
   color: #5a5a5a;
   margin-bottom: 2.4rem;
+
+  @include mobile {
+    height: 25.2rem;
+  }
 
   //스크롤바
   &::-webkit-scrollbar {
