--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -71,7 +71,7 @@
   gap: 1.4rem;
   border: 0;
   border-top: 0.1rem solid $Grayscale200;
-  background: var(--white, #ffffff);
+  background: $White;
 }
 
 .text {
