--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -105,11 +105,20 @@
   }
 }
 
-.editButton {
+.editButtonDesktop {
   float: right;
   margin-bottom: 2.4rem;
 
   @include tablet {
+    display: none;
+  }
+}
+
+.editButton {
+  display: none;
+
+  @include tablet {
+    display: flex;
     position: fixed;
     z-index: 1;
     bottom: 2.4rem;
