style: 헤더 ~~명이 작성했어요! 왼쪽에 마진 추가 	modified:   src/components/Header/HeaderComponents/HeaderService.module.scss

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -77,10 +77,12 @@
       }
 
       p {
+        margin-left: 1.1rem;
         color: var(--gray-900, $Grayscale900);
         font-size: 1.8rem;
         font-weight: 400;
         line-height: 2.7rem;
+
         span {
           font-weight: 700;
         }
