--- a/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  top: 4rem;
-  right: 0rem;
+  top: 4.3rem;
+  right: 0;
   z-index: 1;
   left: auto;
   overflow: auto;
@@ -13,23 +13,11 @@
   border: 1px solid #b6b6b6;
   background: #fff;
   box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
-  width: 31.2rem;
-  height: 13.4rem;
-  @include tablet {
-    width: 24.8rem;
-    right: 20rem;
-    top: 11rem;
-  }
 
-  @include mobile {
-    position: fixed;
-    width: 20.3rem;
-    right: 15.5rem;
-    top: 11rem;
-  }
   .closeModal {
     color: red;
   }
+
   .emojiBtnContainer {
     display: flex;
     flex-wrap: wrap;
@@ -39,6 +27,11 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     justify-content: center;
+
+    @include mobile {
+      margin: 1.6rem;
+    }
+
     &.tabletEmojiBtn {
       grid-template-columns: repeat(3, 1fr);
     }
