chore: 화살표 버튼에 포인터 추가 	modified:   src/components/Header/HeaderComponents/HeaderService.module.scss

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -150,6 +150,7 @@
       }
 
       .modalIcon {
+        cursor: pointer;
         position: relative;
         border: none;
         background-color: $White;
