chore: 토스트 위치 및 우선순위 수정 	modified:   src/pages/PostPage/PostIdPage/PostIdPage.module.scss

--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -90,18 +90,21 @@
 }
 
 .toast {
+  z-index: 2;
   position: fixed;
   bottom: 7rem;
   width: 52.4rem;
   height: 6.4rem;
+  left: 50%;
+  transform: translateX(-50%);
+
   @include tablet {
     position: fixed;
-    bottom: 7rem;
+    bottom: 8.8rem;
   }
+
   @include mobile {
-    position: fixed;
-    bottom: 7rem;
-    width: calc(100% - 4.8rem);
+    width: calc(100% - 4rem);
   }
 }
 
