chore: Header 컴포넌트의 position: fixed

--- a/src/components/Header/HeaderComponents/Header.module.scss
+++ b/src/components/Header/HeaderComponents/Header.module.scss
@@ -1,5 +1,6 @@
 @import 'assets/styles/global.scss';
 .headerContainer {
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
