--- a/src/components/Input/InputText.module.scss
+++ b/src/components/Input/InputText.module.scss
@@ -1,28 +1,29 @@
 @import 'assets/styles/global.scss';
+
 .inputContainer {
-  border-radius: 8px;
-  border: 1px solid var(--gray-300, #ccc);
-  background: var(--white, #fff);
+  border-radius: 0.8rem;
+  border: 0.1rem solid $Grayscale300;
+  background: $White;
   width: 72rem;
   height: 5rem;
   padding: 1.2rem 1.6rem;
   font-size: 1.6rem;
   font-weight: 400;
   @include mobile {
-    width: 32rem;
+    width: 100%;
   }
 }
 .inputContainer:focus {
-  border: 2px solid var(--gray-700, #3a3a3a);
+  border: 0.2rem solid $Grayscale700;
 }
 .inputContainer:hover {
-  border: 1px solid var(--gray-500, #555);
+  border: 0.1rem solid $Grayscale500;
 }
 .isInputValue {
-  border: 2px solid var(--gray-700, #3a3a3a);
+  border: 0.2rem solid $Grayscale700;
 }
 .error {
-  border: 1px solid var(--Error, #dc3a3a);
+  border: 0.1rem solid $Error;
 }
 .errorMsg {
   color: red;
