--- a/src/components/ProfileImg/ProfileImg.module.scss
+++ b/src/components/ProfileImg/ProfileImg.module.scss
@@ -1,57 +1,75 @@
+@import 'assets/styles/global.scss';
+
 .profileContainer {
   display: flex;
   align-items: center;
-  gap: 32px;
+  gap: 3.2rem;
 }
-
-// .defaultImg {
-//   // display: flex;
-//   // padding: 24px;
-//   // align-items: flex-start;
-//   // gap: 10px;
-// }
 
 .profileContent {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 1.2rem;
   p {
-    color: var(--gray-500, #555);
-    font-size: 16px;
+    color: $Grayscale500;
+    font-size: 1.6rem;
     font-weight: 400;
-    line-height: 26px; /* 162.5% */
-    letter-spacing: -0.16px;
+    line-height: 2.6rem; /* 162.5% */
+    letter-spacing: -0.016rem;
+  }
+  @include mobile {
+    width: 100%;
   }
 }
 
 .profileImgContainer {
-  width: 56px;
-  height: 56px;
-  border-radius: 100px;
-  border: 1px solid var(--gray-200, #eee);
-  background: var(--white, #fff);
+  width: 5.6rem;
+  height: 5.6rem;
+  border-radius: 10rem;
+  border: 0.1rem solid $Grayscale200;
+  background: $White;
   cursor: pointer;
   overflow: hidden;
+  @include mobile {
+    width: 4rem;
+    height: 4rem;
+  }
 }
 
 .profileImg {
-  width: 56px;
-  height: 56px;
+  width: 5.6rem;
+  height: 5.6rem;
+  @include mobile {
+    width: 4rem;
+    height: 4rem;
+  }
 }
 
 .profileImgSelect {
-  color: var(--gray-500, #555);
-  font-size: 16px;
+  color: $Grayscale500;
+  font-size: 1.6rem;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
-  letter-spacing: -0.16px;
+  line-height: 2.6rem; /* 162.5% */
+  letter-spacing: -0.016rem;
 }
 
 .profileImgSelectContainer {
-  width: 605px;
-  height: 56px;
+  width: 60.5rem;
+  height: 5.6rem;
+  @include mobile {
+    width: 100%;
+    height: 8.4rem;
+  }
 }
 
 .defaultProfileImg {
-  border-radius: 100px;
+  border-radius: 10rem;
+  @include mobile {
+    width: 8rem;
+  }
+}
+
+.defaultProfileImgContainer {
+  width: 8rem;
+  height: 8rem;
 }
