--- a/src/pages/PostPage/PostIdPage/MessagePage/MessagePage.module.scss
+++ b/src/pages/PostPage/PostIdPage/MessagePage/MessagePage.module.scss
@@ -1,29 +1,43 @@
+@import 'assets/styles/global.scss';
+
+.headerContainer {
+  @include mobile {
+    display: none;
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 4.7rem;
+  padding-top: 11.2rem;
+  @include mobile {
+    padding: 5rem 2rem 2.4rem 2rem;
+  }
 }
 
 .messageContainer {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 5rem;
   width: 72rem;
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .contentContainer {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 1.2rem;
 }
 
 .contentTitle {
-  color: var(--gray-900, #181818);
-  font-size: 24px;
+  color: $Grayscale900;
+  font-size: 2.4rem;
   font-weight: 700;
-  line-height: 36px; /* 150% */
-  letter-spacing: -0.24px;
+  line-height: 3.6rem; /* 150% */
+  letter-spacing: -0.024rem;
 }
 
 .buttonContainer {
@@ -38,5 +52,5 @@
 .profileContainer {
   display: flex;
   align-items: center;
-  gap: 32px;
+  gap: 3.2rem;
 }
