chore: 프로필 관련 커스텀 훅 구현

--- a/src/components/ProfileImg/ProfileImg.module.scss
+++ b/src/components/ProfileImg/ProfileImg.module.scss
@@ -30,6 +30,7 @@
   background: $White;
   cursor: pointer;
   overflow: hidden;
+  margin-right: 0.2rem;
   @include mobile {
     width: 4rem;
     height: 4rem;
