--- a/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/EmojiDropdown.module.scss
@@ -5,14 +5,18 @@
   flex-direction: column;
   position: absolute;
   top: 4.3rem;
-  right: 0;
+  right: -0.45rem;
   z-index: 1;
-  left: auto;
   overflow: auto;
   border-radius: 8px;
-  border: 1px solid #b6b6b6;
+  border: 0.1rem solid #b6b6b6;
   background: #fff;
-  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, 0.08);
+
+  @include mobile {
+    top: 3.6rem;
+    right: -0.6rem;
+  }
 
   .closeModal {
     color: red;
