--- a/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/PostIdPage.module.scss
@@ -62,9 +62,20 @@
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
+  transition: transform 0.3s ease;
 
   @include mobile {
     height: 23.1rem;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+    z-index: 1;
+
+    @include tablet {
+      transform: scale(1);
+      z-index: 0;
+    }
   }
 }
 
