--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -66,7 +66,6 @@
     }
 
     .howManyPerson {
-      margin-right: 2.8rem;
       display: flex;
 
       @include tablet {
@@ -128,6 +127,7 @@
     .selectionBar {
       width: 0.1rem;
       height: 2.8rem;
+      margin: 0 2.8rem;
       background-color: var(--gray-200, #eee);
       @include tablet {
         display: none;
