--- a/src/pages/ListPage/ListPage.module.scss
+++ b/src/pages/ListPage/ListPage.module.scss
@@ -19,7 +19,12 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin: 2.4rem auto;
+  margin: 0 auto;
+  padding: 2.4rem;
+
+  @include mobile {
+    padding: 2.4rem 2rem;
+  }
 }
 
 .button {
@@ -27,9 +32,6 @@
   padding: 1.4rem 2.4rem;
 
   @include tablet {
-    width: calc(100% - 2.4rem * 2);
-  }
-  @include mobile {
-    width: calc(100% - 2rem * 2);
+    width: 100%;
   }
 }
