style: 드롭다운 스타일 수정 	modified:   src/components/Dropdown/Dropdown.jsx 	modified:   src/components/Dropdown/Dropdown.module.scss

--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -39,6 +39,7 @@
 
   &:focus {
     border: 0.2rem solid $Grayscale500;
+    margin: -0.1rem;
     button {
       color: $Grayscale900;
     }
@@ -46,6 +47,7 @@
 
   &:active {
     border: 0.2rem solid $Grayscale500;
+    margin: -0.1rem;
     button {
       color: $Grayscale900;
     }
