style: 화살표 위치 조정 	modified:   src/components/Dropdown/Dropdown.jsx 	modified:   src/components/Dropdown/Dropdown.module.scss

--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -37,16 +37,17 @@
     }
   }
 
-  &:focus {
-    border: 0.2rem solid $Grayscale500;
-    margin: -0.1rem;
-    button {
-      color: $Grayscale900;
-    }
-  }
+  // &:focus {
+  //   border: 0.2rem solid $Grayscale500;
+  //   margin: -0.1rem;
+  //   button {
+  //     color: $Grayscale900;
+  //   }
+  // }
 
   &:active {
     border: 0.2rem solid $Grayscale500;
+    width: 32.2rem;
     margin: -0.1rem;
     button {
       color: $Grayscale900;
