style: 두 줄 넘어가는 작성자 이름 처리 	modified:   src/components/Modal/Modal.module.scss 	modified:   src/components/card/card.module.scss

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -75,9 +75,15 @@
   font-weight: $fontWeightRegular;
   font-style: normal;
   line-height: 2.4rem;
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   p {
     font-weight: $fontWeightBold;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
   }
 }
 
