--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -58,12 +58,9 @@
       align-items: flex-start;
       gap: 0.6rem;
       color: $Black;
-      white-space: nowrap; /* 텍스트가 줄바꿈 없이 한 줄로 표시되도록 설정 */
-      overflow: hidden; /* 컨테이너 범위를 넘어서는 콘텐츠가 숨겨지도록 설정 */
 
       .sender {
         display: flex;
-        align-items: center;
         gap: 0.6rem;
         line-height: 2.4rem;
         letter-spacing: normal;
@@ -78,6 +75,11 @@
           @include font20Bold;
           line-height: inherit;
           letter-spacing: inherit;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
         }
       }
     }
