style: 이모지피커 위치 조정 	modified:   src/components/Header/HeaderComponents/HeaderService.jsx 	modified:   src/components/Header/HeaderComponents/HeaderService.module.scss 	modified:   src/components/Header/HeaderComponents/ShareDropdown.module.scss

--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -193,8 +193,12 @@
 
 .emojiSelect {
   position: absolute;
-  top: 4rem;
-  right: 5rem;
+  top: 4.2rem;
+  right: 1.5rem;
+
+  @include mobile {
+    right: -7rem;
+  }
 }
 
 .headerRightButton {
