--- a/src/components/Header/HeaderComponents/ShareDropdown.module.scss
+++ b/src/components/Header/HeaderComponents/ShareDropdown.module.scss
@@ -3,23 +3,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 1;
+  overflow: auto;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #b6b6b6;
+  background: #fff;
+  box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, 0.08);
+  width: 14rem;
+  height: 12rem;
   position: absolute;
-  top: 4rem;
-  right: 0;
+  top: 4.3rem;
+  right: -0.8rem;
+
   @include tablet {
+    top: 4.4rem;
     right: 0;
   }
   @include mobile {
-    right: 0;
+    top: 4.2rem;
   }
-  z-index: 1;
-  overflow: auto;
-  border-radius: 8px;
-  border: 1px solid #b6b6b6;
-  background: #fff;
-  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.08);
-  width: 14rem;
-  height: 12rem;
+
   .shareKakao,
   .shareUrl {
     width: 13.8rem;
@@ -27,7 +30,7 @@
     padding: 1.6rem 1.2rem;
     background-color: #ffffff;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 2.6rem;
     font-size: 1.6rem;
     border: none;
     transition: background-color 0.3s;
