--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap'); // Noto Sans
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css'); // Pretendard
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap'); // 나눔명조 Nanum Myeongjo
+@font-face {
+  font-family: 'Handletter';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/naverfont_05@1.0/Handletter.woff');
+  font-weight: normal;
+  font-style: normal;
+} // 나눔손글씨 손편지체 Handletter
+
 body {
   margin: 0;
   font-family:
