--- a/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
@@ -1,21 +1,20 @@
 @import 'assets/styles/global.scss';
 
-html,
-body {
-  height: 100%;
-}
-
 .cardListOverContainer {
-  height: calc(100% - 12.7rem);
+  display: flex;
+  padding: 11.2rem 2.4rem 13.5rem;
+  min-height: calc(100vh - 11.9rem);
+
+  @include tablet {
+    padding: 9.2rem 2.4rem 13.5rem;
+  }
+
+  @include mobile {
+    padding: 3.2rem 2rem 13.5rem;
+    min-height: calc(100vh - 10.4rem);
+  }
 }
 
-.cardListContainer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  overflow: scroll;
-}
 .beige {
   background-color: $Orange200;
 }
@@ -28,33 +27,28 @@ body {
 .green {
   background-color: $Green200;
 }
-.heightCover {
-  height: 12.7rem;
+
+.contentContainer {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 120rem;
 }
 
 .cardList {
-  position: relative;
   display: grid;
-  margin-top: 11.3rem;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
-  width: 120rem;
-  grid-auto-rows: 28rem;
+  width: 100%;
+
   @media (max-width: 1248px) {
-    width: calc(100% - 4.8rem);
-    margin-left: 2.4rem;
-    margin-right: 2.4rem;
-    margin-top: 9.3rem;
   }
+
   @include tablet {
-    width: 100%;
     grid-template-columns: 1fr 1fr;
-    margin-top: 9.3rem;
   }
+
   @include mobile {
-    width: 100%;
     grid-template-columns: 1fr;
-    margin-top: 3.2rem;
   }
 }
 
@@ -62,33 +56,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 38.4rem;
-  height: 28rem;
+  width: 100%;
+  height: 28.1rem;
   border-radius: 1.6rem;
   background: $White;
   box-shadow: 0rem 0.2rem 1.2rem 0rem rgba(0, 0, 0, 0.08);
   padding: 2.8rem 2.4rem;
-  @include tablet {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.card {
-  position: relative;
   transition: transform 0.3s ease;
+
+  @include mobile {
+    height: 23.1rem;
+  }
+
   &:hover {
     transform: scale(1.1);
     z-index: 1;
-  }
-  @include tablet {
-    &:hover {
-      transform: scale(1);
-      z-index: 0;
-    }
-  }
-  @include mobile {
-    &:hover {
+
+    @include tablet {
       transform: scale(1);
       z-index: 0;
     }
@@ -96,31 +80,54 @@ body {
 }
 
 .toast {
+  z-index: 2;
   position: fixed;
   bottom: 7rem;
   width: 52.4rem;
   height: 6.4rem;
+  left: 50%;
+  transform: translateX(-50%);
+
   @include tablet {
     position: fixed;
-    bottom: 7rem;
+    bottom: 8.8rem;
   }
+
   @include mobile {
-    position: fixed;
-    bottom: 7rem;
-    width: calc(100% - 4.8rem);
+    width: calc(100% - 4rem);
   }
 }
 
-.editButton {
-  position: absolute;
-  top: -5rem;
-  right: 0;
+.editButtonDesktop {
+  float: right;
+  margin-bottom: 1.1rem;
+  margin-left: 0.8rem;
+
   @include tablet {
+    display: none;
+  }
+}
+
+.editButtonContainer {
+  display: none;
+
+  @include tablet {
+    display: flex;
+    gap: 1.8rem;
     position: fixed;
     z-index: 1;
     bottom: 2.4rem;
-    right: auto;
-    top: auto;
     width: calc(100% - 4.8rem);
+  }
+
+  @include mobile {
+    gap: 1.2rem;
+    width: calc(100% - 4rem);
+  }
+
+  .editButton {
+    @include tablet {
+      width: 100%;
+    }
   }
 }
