--- a/src/components/Header/HeaderComponents/HeaderService.module.scss
+++ b/src/components/Header/HeaderComponents/HeaderService.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   @include mobile {
-    padding-top: 0.8rem;
+    padding-top: 1.2rem;
   }
 
   .headerContainer {
@@ -40,7 +40,20 @@
     padding: 0 2.4rem;
 
     @include mobile {
+      display: flex;
+      align-items: center;
       padding: 0 2rem;
+    }
+
+    .logoImg {
+      display: none;
+
+      @include mobile {
+        display: block;
+        width: 2.4rem;
+        height: 2.4rem;
+        margin-right: 0.8rem;
+      }
     }
 
     .toNickname {
