chore: 텍스트 줄바꿈 기준 설정 	modified:   src/components/Modal/Modal.module.scss 	modified:   src/components/card/card.module.scss

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -108,6 +108,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
+  line-break: anywhere;
 
   @include font18Regular;
   text-align: start;
