--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -103,6 +103,7 @@
   padding-right: 1.6rem;
   text-align: left;
   overflow: auto;
+  line-break: anywhere;
   color: #5a5a5a;
   margin-bottom: 2.4rem;
 
