--- a/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
+++ b/src/pages/PostPage/PostIdPage/EditPage/EditPage.module.scss
@@ -100,8 +100,7 @@
 
 .editButtonDesktop {
   float: right;
-  margin-bottom: 1.1rem;
-  margin-left: 0.8rem;
+  margin: 0 0 1.1rem 0.9rem;
 
   @include tablet {
     display: none;
@@ -113,9 +112,9 @@
 
   @include tablet {
     display: flex;
-    gap: 1.6rem;
+    gap: 2rem;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     bottom: 2.4rem;
     width: calc(100% - 4.8rem);
   }
