--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -13,15 +13,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 12.2rem;
+    padding-top: 5.7rem;
     @include mobile {
-      margin-top: 5rem;
+      padding-top: 5rem;
     }
     .recipientContainer {
       .toText {
         font-size: 2.4rem;
         font-weight: 700;
-        line-height: 42px;
+        line-height: 4.2rem;
       }
       .error {
         color: red;
@@ -48,10 +48,11 @@
         margin-top: 6.9rem;
         width: 72rem;
         @include tablet {
-          margin-top: 34rem;
+          position: fixed;
+          bottom: 2.4rem;
+          margin-top: 0;
         }
         @include mobile {
-          margin-top: 8.2rem;
           width: 32rem;
         }
       }
